--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -1,31 +1,30 @@
 /*
 _footer.scss
 *******************************************************************************************************************/
-.footerWrap{
-    padding-top: 30px !important;
-    padding-bottom: 5px !important;
-}
-
-@media (min-width: $bp-md){
-    .footerWrap{
-        padding-top: 50px !important;
-        padding-bottom: 25px !important;
-    }
-}
 
 /* gototop
 -------------------------------------------------- */
 .pagetop{
-    color: $color-b1;
-    background-color: #fff;
-    border-top: 1px solid rgba(184, 180, 180, 0.6);
+    position: fixed;
+    right: 15px;
+    bottom: 10px;
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    background-color: #333;
+    border: 1px solid #fff;
+    opacity: .9;
     
     & > a {
-        @include fxcol-ac-jc;
         width: 100%;
-        padding: 15px;
-        text-align: center;
+        height: 100%;
+        @include fxrow-ac-jc;
         @include transition(.1s);
+        
+        i{
+            font-size: 2.2rem;
+            color: #fff;
+        }
         
         &:hover {
             color: #fff;
@@ -34,99 +33,10 @@ _footer.scss
     }
 }
 
-/* footerWrap
--------------------------------------------------- */
-.footerWrap{
-    font-size: 1.2rem;
-    background-color: #373737;
-    
-    .footerSitemap {
-        padding: 0 20px;
-        margin-bottom: 25px;
-        
-        &__ttl{
-            width: 100%;
-            margin-bottom: 10px;
-            border-bottom: 1px solid #e9e9e9;
-            
-            a {
-                color: #fff;
-                line-height: 2.5;
-                
-                span{
-                    padding-left: 5px;
-                    color: $color-t1;
-                }
-                
-                &:hover{
-                    color: $color-s1;
-                }
-            }
-            
-            
-        }  
-        
-        &__list{
-            max-height: 150px;
-            @include fxcol;
-            @include --fxwrap;
-        }
-        
-        &__itm{
-            margin-bottom: 10px;
-        }
-        
-        &__lnk {
-            color: #fff;
-            
-            span {
-                margin-left: 5px;
-                color: $color-t1;
-                font-weight: bold;
-            }
-            
-            &:hover{
-                color: $color-s1;
-            }
-        }
-    }
-    
-    .footerInfo {
-        color: #fff;
-        padding-left: .7rem;
-        
-        
-        li{
-            padding-left: 1.5em;
-            text-indent: -1.0em;
-        }
-        
-        
-        &__lnk {
-            color: #fff;
-        }
-        
-        i {
-            margin-right: 5px;
-            color: $color-t1;
-            font-weight: bold;
-        }
-        
-    }
-}
-
 @media (min-width: $bp-md){
-    .footerWrap{
-        font-size: 1.4rem;
-        
-        .footerSitemap {
-            padding: 0 0;
-            
-            &__list{
-                max-height: 120px;
-            }
-            
-        }
+    .pagetop{
+        right: 100px;
+        bottom: 25px;
     }
 }
 
@@ -135,7 +45,7 @@ _footer.scss
 .copyWrap{
     padding:0 !important;
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 1.0rem;
     background-color: #333; 
     
     .copyBody{
