--- a/sass/common/_layout.scss
+++ b/sass/common/_layout.scss
@@ -53,14 +53,14 @@ _layout.scss
     }
 }
 
-/* #h-ABOUT
+/* #h-COMPANY
 -------------------------------------------------- */
-#h-ABOUT .aboutWrap{
+#h-COMPANY .companyWrap{
     
 }
 
 @media (min-width: $bp-md) {
-    #h-ABOUT .l-container{
+    #h-COMPANY .l-container{
         max-width: 800px;
     }
 }
