--- a/sass/components/_page.scss
+++ b/sass/components/_page.scss
@@ -73,7 +73,6 @@ _page.scss
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            background-color: #111;
             width: 100%;
             height: 100%;
         }
@@ -123,12 +122,12 @@ _page.scss
         }
         
         &__illustBg{
-            width: 300px;
+            width: 330px;
             height: auto;
             margin-right: auto;
             margin-left: auto;
             position: absolute;
-            bottom: -280px;
+            bottom: -330px;
             right:50%;
             transform: translateX(50%);
             
@@ -149,12 +148,12 @@ _page.scss
         }
         
         &__illustBg{
-            width: 300px;
+            width: 280px;
             height: auto;
             margin-right: auto;
             margin-left: auto;
             position: absolute;
-            bottom: -340px;
+            bottom: -350px;
             right:50%;
             transform: translateX(50%);
             
@@ -168,12 +167,12 @@ _page.scss
         }
         
         &__illustBg{
-            width: 340px;
+            width: 330px;
             height: auto;
             margin-right: auto;
             margin-left: auto;
             position: absolute;
-            bottom: -280px;
+            bottom: -330px;
             right:50%;
             transform: translateX(50%);
             
@@ -195,7 +194,7 @@ _page.scss
             margin-bottom: 280px;
             
             .serviceDesc{
-                &__img{margin-top: 50px;}
+                &__img{margin-top: 30px;}
             }
             
             .serviceService{
@@ -254,8 +253,8 @@ _page.scss
             }
             
             &__illustBg{
-                width: 370px;
-                bottom: -320px;
+                width: 330px;
+                bottom: -280px;
                 right:-130px;
                 transform: translateX(0%);
             }
@@ -277,14 +276,13 @@ _page.scss
 }
 
 
-/*  companyProfile
+/*  company
 -------------------------------------------------- */
-#h-ABOUT .aboutWrap{
-    .row [class*="col"]:not(:last-child){
+.companyContent{
+    & >*:not(:last-child){
         margin-bottom: 50px;
     }
 }
-
 
 .companyProfile{
     font-size: 1.2rem;
