--- a/sass/common/_footer.scss
+++ b/sass/common/_footer.scss
@@ -5,6 +5,7 @@ _footer.scss
 /* gototop
 -------------------------------------------------- */
 .pagetop{
+    z-index: 150;
     position: fixed;
     right: 15px;
     bottom: 10px;
