--- a/css/style.css
+++ b/css/style.css
@@ -1966,6 +1966,7 @@ _footer.scss
 /* gototop
 -------------------------------------------------- */
 .pagetop {
+  z-index: 150;
   position: fixed;
   right: 15px;
   bottom: 10px;
