--- a/sass/components/_typography.scss
+++ b/sass/components/_typography.scss
@@ -27,6 +27,13 @@ _typography.scss
     //     [class*="prg-"] .richtext p br {display: none;}
     // }
     
+    /* -----------------------------------------------
+    /* decoration
+    -------------------------------------------------- */
+    .fontSize--l{
+       font-size: 1.5em;
+    }
+    
     
     /* -----------------------------------------------
     /* Title    [ttl-***]
