--- a/sass/common/_header.scss
+++ b/sass/common/_header.scss
@@ -353,7 +353,7 @@ body.is-fix {
     &__copyMain{
         text-align: center;
         color: #fff;
-        font-size: 3.2rem;
+        font-size: 8vw;
         font-weight: 600;
         letter-spacing: 5px;
         line-height: 1.2;
@@ -363,7 +363,7 @@ body.is-fix {
     &__copySub{
         text-align: center;
         color: #fff;
-        font-size: 2.0rem;
+        font-size: 5vw;
         font-weight: 500;
     }
 }
