--- a/sass/components/_link.scss
+++ b/sass/components/_link.scss
@@ -12,8 +12,10 @@ _link.scss
 -------------------------------------------------- */
 .wrap-btn {
     @include fxrow-jc;
-    width: 100%;
+    
     margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media (min-width: $bp-sm) {
@@ -25,11 +27,12 @@ _link.scss
 /*  btn-type
 -------------------------------------------------- */
 .btnPrim--thema {
+    max-width: 300px;
+    height: 60px;
     @include infxrow-ac-jc;
     -webkit-user-select: none;
     position: relative;
-    min-width: 300px;
-    height: 60px;
+    width: 100%;
     color: currentColor;
     font-size: 1.5rem;
     font-weight: 400;
