--- a/sass/components/_page.scss
+++ b/sass/components/_page.scss
@@ -98,6 +98,15 @@ _page.scss
         
         /*  serviceConsept */
         .serviceConsept{
+            
+            &__img{
+                text-align: center;
+                
+                img{
+                    max-width: 100%;
+                }
+            }
+            
             &__content{
                 dl{margin-bottom: 15px;}
                 dd{font-weight: 400; font-size: 1.2rem; line-height: 1.7;}
