--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -52,6 +52,10 @@ _card.scss
     &__btn {
         text-align: center;
         margin-top: 0;
+        
+        a{
+            max-width: 600px;
+        }
     }
     
     &__cat {
