--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,15 @@ html::-webkit-scrollbar-thumb {
   background: #fcb90f;
 }
 
+/* 範囲指定の色 */
+::-moz-selection {
+  background: #fcb90f;
+}
+
+::selection {
+  background: #fcb90f;
+}
+
 /*  body
 -------------------------------------------------- */
 body {
